applications/whereami/service-internal.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "whereami"
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http # adding for ingress
  selector:
    app: "whereami"
  type: "ClusterIP"
