applications/whereami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whereami
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: mrinal.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: whereami
                port:
                  name: http
